package ar.edu.frba.ddsi.servicio_fuente_dinamica.models.entities.utils.solicitudEliminacion;

public enum Estado {
  ACEPTADA,
  PENDIENTE,
  RECHAZADA
}
