package ar.edu.frba.ddsi.servicio_fuente_dinamica.models.entities.utils.usuario;

public class Permiso {
  private String descripcion;
}
