@startuml

class Hecho {
- id: Long
- titulo: String
- descripcion: String
- categoria: Categoria
- ubicacion: Ubicacion
- fechaCreacion: LocalDate
- fechaModificacion: LocalDate
- rutaArchivoMultimedia: String //puede ser null.
- tipoArchivoMultimedia: String //puede ser null.
- contribuyente: Usuario
- etiquetas: List<String>
- eliminado: Boolean
}

class Usuario {
- nombre: String
- apellido: String
- edad: Integer
- rol: Rol
}

class Rol {
- nombre: String
- permisos: List<Permiso>

+ tenesPermiso(permiso: Permiso): boolean
}

class Permiso {
- descripcion: String
}

Hecho --> Usuario
Usuario --> Rol
Rol --> Permiso

Ubicacion --* Hecho
Categoria --* Hecho

class Ubicacion {
- Latitud: Double
- Longitud: Double
}
class Categoria {
- nombre: String
}

interface CriterioPertenencia {
+ aplicarCriterio(): List<Hecho>
}

class CriterioTitulo implements CriterioPertenencia{
- palabraClave: String

+ aplicarCriterio(List<Hecho> hechos): List<Hecho>
}

class CriterioFecha implements CriterioPertenencia{
- desde: LocalDate
- hasta: LocalDate

+ aplicarCriterio(List<Hecho> hechos): List<Hecho>
}
class CriterioUbicacion implements CriterioPertenencia{
- latitud: Double
- longitud: Double

+ aplicarCriterio(List<Hecho> hechos): List<Hecho>
}

class CriterioCategoria  implements CriterioPertenencia{
- categoria: String

+ aplicarCriterio(List<Hecho> hechos): List<Hecho>
}

class CriterioDescripcion implements CriterioPertenencia{
- palabraClave: String

+ aplicarCriterio(List<Hecho> hechos): List<Hecho>
}

class Coleccion {
- titulo: String
- descripcion: String
- hechos: List<Hecho>
- criterios: List<CriterioPertenencia>
- fuente: FuenteDatos

+ setCriterioDePertencia
+ asociarFuente(FuenteDatos fuente): void
+ asociarFuente(FuenteDatos fuente, CriterioPertenencia criterio): void
+ agregarCriterioDePertenencia(criterio: CriterioPertenencia): void
}

Coleccion -->"*" Hecho
Coleccion --> CriterioPertenencia

class SolicitudDeEliminacion {
- hecho: Hecho
- fundamento: String
- historialEstados: List<EstadoYHora>
- detectorSpam: DetectorDeSpam

- estadoActual(): Estado
- cambiarEstado(estado: Estado):void
}

class EstadoYHora {
+ estado: Estado
+ fecha: LocalDate
}

enum Estado {
ELIMINADO
PENDIENTE
RECHAZADO
}

SolicitudDeEliminacion --> EstadoYHora
EstadoYHora --> Estado

interface DetectorDeSpam {
+ esSpam(texto: String): Boolean
}
@enduml